--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -6,5 +6,9 @@
     "add_to_cart": "カートに入れる",
     "price_yen": "¥{{price}}",
     "search_placeholder": "商品を検索...",
-    "hero_subtitle": "レアなフィギュアから最新グッズまで、正規ルートで仕入れた本物をお届けします。"
+    "hero_subtitle": "レアなフィギュアから最新グッズまで、正規ルートで仕入れた本物をお届けします。",
+    "hero_title_1": "最新フィギュア",
+    "hero_subtitle_1": "話題のアニメから最新のフィギュアが入荷しました。",
+    "hero_title_2": "希少コレクターズアイテム",
+    "hero_subtitle_2": "入手困難な限定品やレアなグッズを取り揃えています。"
 }
