--- a/public/locales/th/common.json
+++ b/public/locales/th/common.json
@@ -5,5 +5,9 @@
     "featured_products": "สินค้าแนะนำ",
     "add_to_cart": "เพิ่มลงตะกร้า",
     "price_yen": "¥{{price}}",
-    "hero_subtitle": "รับประกันของแท้ 100%・จัดส่งทั่วโลก"
+    "hero_subtitle": "รับประกันของแท้ 100%・จัดส่งทั่วโลก",
+    "hero_title_1": "ฟิกเกอร์ล่าสุด",
+    "hero_subtitle_1": "ฟิกเกอร์ล่าสุดจากอนิเมะยอดนิยมมาถึงแล้ว",
+    "hero_title_2": "ของสะสมหายาก",
+    "hero_subtitle_2": "เรามีสินค้าลิมิเต็ดและสินค้าหายากที่หาซื้อได้ยาก"
 }
