--- a/public/locales/zh-CN/common.json
+++ b/public/locales/zh-CN/common.json
@@ -5,5 +5,9 @@
     "featured_products": "おすすめ商品",
     "add_to_cart": "カートに追加",
     "price_yen": "¥{{price}}",
-    "hero_subtitle": "100%正規品保証・世界中へ配送"
+    "hero_subtitle": "100%正規品保証・世界中へ配送",
+    "hero_title_1": "最新手办",
+    "hero_subtitle_1": "热门动漫的最新手办已到货。",
+    "hero_title_2": "稀有收藏品",
+    "hero_subtitle_2": "我们要约难以入手的限定商品和稀有周边。"
 }
