--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -10,5 +10,18 @@
     "hero_title_1": "Latest Figures",
     "hero_subtitle_1": "Fresh arrivals of the hottest anime figures.",
     "hero_title_2": "Rare Collectibles",
-    "hero_subtitle_2": "We stock hard-to-find limited editions and rare merchandise."
+    "hero_subtitle_2": "We stock hard-to-find limited editions and rare merchandise.",
+    "shop_intro_title_main": "The Best Japanese Goods, ",
+    "shop_intro_title_highlight": "Directly To You",
+    "shop_intro_text": "Japan Anime Shoten is your premier destination for authentic anime figures, trading cards, and exclusive merchandise. Sourced directly from Tokyo, we ensure every item is 100% genuine and shipped with care.",
+    "btn_view_new_arrivals": "View New Arrivals",
+    "btn_about_us": "About Us",
+    "badge_shipping_title": "Worldwide Shipping",
+    "badge_shipping_desc": "Tracked & Insured",
+    "badge_authentic_title": "100% Authentic",
+    "badge_authentic_desc": "Guaranteed Genuine",
+    "badge_secure_title": "Secure Payment",
+    "badge_secure_desc": "256-bit SSL Encryption",
+    "badge_support_title": "Support 24/7",
+    "badge_support_desc": "Dedicated Team"
 }
