--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -10,5 +10,18 @@
     "hero_title_1": "最新フィギュア",
     "hero_subtitle_1": "話題のアニメから最新のフィギュアが入荷しました。",
     "hero_title_2": "希少コレクターズアイテム",
-    "hero_subtitle_2": "入手困難な限定品やレアなグッズを取り揃えています。"
+    "hero_subtitle_2": "入手困難な限定品やレアなグッズを取り揃えています。",
+    "shop_intro_title_main": "最高品質の日本製品を、",
+    "shop_intro_title_highlight": "あなたのもとへ直送",
+    "shop_intro_text": "Japan Anime Shotenは、本物のアニメフィギュア、トレーディングカード、限定グッズを扱う最高のオンラインショップです。東京から直接仕入れを行い、すべての商品が100%本物であることを保証し、丁寧にお届けします。",
+    "btn_view_new_arrivals": "新着商品を見る",
+    "btn_about_us": "私たちについて",
+    "badge_shipping_title": "世界中へ配送",
+    "badge_shipping_desc": "追跡・保険付き",
+    "badge_authentic_title": "100% 正規品保証",
+    "badge_authentic_desc": "本物をお届け",
+    "badge_secure_title": "安全な決済",
+    "badge_secure_desc": "256ビットSSL暗号化",
+    "badge_support_title": "24時間年中無休サポート",
+    "badge_support_desc": "専任チーム対応"
 }
