--- a/public/locales/ko/common.json
+++ b/public/locales/ko/common.json
@@ -10,5 +10,18 @@
     "hero_title_1": "최신 피규어",
     "hero_subtitle_1": "인기 애니메이션의 최신 피규어가 입고되었습니다.",
     "hero_title_2": "희귀 소장품",
-    "hero_subtitle_2": "구하기 힘든 한정판 및 희귀 굿즈를 취급합니다."
+    "hero_subtitle_2": "구하기 힘든 한정판 및 희귀 굿즈를 취급합니다.",
+    "shop_intro_title_main": "최고의 일본 상품을,",
+    "shop_intro_title_highlight": "당신에게 직송합니다",
+    "shop_intro_text": "Japan Anime Shoten은 정품 애니메이션 피규어, 트레이딩 카드, 독점 상품을 위한 최고의 목적지입니다. 도쿄에서 직접 소싱하여 모든 상품이 100% 정품임을 보장하며 정성껏 배송합니다.",
+    "btn_view_new_arrivals": "신상품 보기",
+    "btn_about_us": "회사 소개",
+    "badge_shipping_title": "전 세계 배송",
+    "badge_shipping_desc": "추적 가능 & 보험 가입",
+    "badge_authentic_title": "100% 정품 보증",
+    "badge_authentic_desc": "정품 보장",
+    "badge_secure_title": "안전한 결제",
+    "badge_secure_desc": "256비트 SSL 암호화",
+    "badge_support_title": "24/7 지원",
+    "badge_support_desc": "전담 팀 지원"
 }
