--- a/public/locales/th/common.json
+++ b/public/locales/th/common.json
@@ -9,5 +9,18 @@
     "hero_title_1": "ฟิกเกอร์ล่าสุด",
     "hero_subtitle_1": "ฟิกเกอร์ล่าสุดจากอนิเมะยอดนิยมมาถึงแล้ว",
     "hero_title_2": "ของสะสมหายาก",
-    "hero_subtitle_2": "เรามีสินค้าลิมิเต็ดและสินค้าหายากที่หาซื้อได้ยาก"
+    "hero_subtitle_2": "เรามีสินค้าลิมิเต็ดและสินค้าหายากที่หาซื้อได้ยาก",
+    "shop_intro_title_main": "สินค้าญี่ปุ่นคุณภาพเยี่ยม,",
+    "shop_intro_title_highlight": "ส่งตรงถึงมือคุณ",
+    "shop_intro_text": "Japan Anime Shoten คือจุดหมายปลายทางอันดับต้นๆ สำหรับฟิกเกอร์อนิเมะของแท้ การ์ดสะสม และสินค้าพิเศษ เราจัดหาโดยตรงจากโตเกียว รับประกันว่าสินค้าทุกชิ้นเป็นของแท้ 100% และจัดส่งด้วยความระมัดระวัง",
+    "btn_view_new_arrivals": "ดูสินค้ามาใหม่",
+    "btn_about_us": "เกี่ยวกับเรา",
+    "badge_shipping_title": "จัดส่งทั่วโลก",
+    "badge_shipping_desc": "ติดตามได้ & มีประกัน",
+    "badge_authentic_title": "ของแท้ 100%",
+    "badge_authentic_desc": "รับประกันของแท้",
+    "badge_secure_title": "การชำระเงินที่ปลอดภัย",
+    "badge_secure_desc": "การเข้ารหัส SSL 256 บิต",
+    "badge_support_title": "บริการช่วยเหลือ 24/7",
+    "badge_support_desc": "ทีมงานมืออาชีพ"
 }
