--- a/public/locales/zh-CN/common.json
+++ b/public/locales/zh-CN/common.json
@@ -9,5 +9,18 @@
     "hero_title_1": "最新手办",
     "hero_subtitle_1": "热门动漫的最新手办已到货。",
     "hero_title_2": "稀有收藏品",
-    "hero_subtitle_2": "我们要约难以入手的限定商品和稀有周边。"
+    "hero_subtitle_2": "我们要约难以入手的限定商品和稀有周边。",
+    "shop_intro_title_main": "精选日本商品，",
+    "shop_intro_title_highlight": "直邮到您手中",
+    "shop_intro_text": "Japan Anime Shoten 是您购买正版动漫手办、集换式卡牌和独家周边的首选目的地。所有商品均直接从东京采购，确保 100% 正品，并精心包装发货。",
+    "btn_view_new_arrivals": "查看新到商品",
+    "btn_about_us": "关于我们",
+    "badge_shipping_title": "全球配送",
+    "badge_shipping_desc": "可追踪 & 有保险",
+    "badge_authentic_title": "100% 正品保证",
+    "badge_authentic_desc": "保证原装正版",
+    "badge_secure_title": "安全支付",
+    "badge_secure_desc": "256位 SSL 加密",
+    "badge_support_title": "全天候支持",
+    "badge_support_desc": "专业团队服务"
 }
