--- a/public/locales/zh-TW/common.json
+++ b/public/locales/zh-TW/common.json
@@ -10,5 +10,18 @@
     "hero_title_1": "最新手辦",
     "hero_subtitle_1": "熱門動漫的最新手辦已到貨。",
     "hero_title_2": "稀有收藏品",
-    "hero_subtitle_2": "我們搜羅難以入手的限定商品和稀有周邊。"
+    "hero_subtitle_2": "我們搜羅難以入手的限定商品和稀有周邊。",
+    "shop_intro_title_main": "精選日本商品，",
+    "shop_intro_title_highlight": "直郵到您手中",
+    "shop_intro_text": "Japan Anime Shoten 是您購買正版動漫手辦、集換式卡牌和獨家周邊的首選目的地。所有商品均直接從東京採購，確保 100% 正品，並精心包裝發貨。",
+    "btn_view_new_arrivals": "查看新到商品",
+    "btn_about_us": "關於我們",
+    "badge_shipping_title": "全球配送",
+    "badge_shipping_desc": "可追蹤 & 有保險",
+    "badge_authentic_title": "100% 正品保證",
+    "badge_authentic_desc": "保證原裝正版",
+    "badge_secure_title": "安全支付",
+    "badge_secure_desc": "256位 SSL 加密",
+    "badge_support_title": "全天候支持",
+    "badge_support_desc": "專業團隊服務"
 }
