--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -26,5 +26,22 @@
     "badge_support_desc": "Stay Updated on Delivery",
     "announcement_shipping": "Free Standard Shipping!",
     "text_free_shipping": "Free Standard Shipping",
-    "text_auth_guarantee": "100% Authentic Guarantee"
+    "text_auth_guarantee": "100% Authentic Guarantee",
+    "featured_products": "Featured Products",
+    "view_all_products": "View All Products",
+    "search": "Search",
+    "footer_about_us": "About Us",
+    "footer_our_story": "Our Story",
+    "footer_authenticity": "Authenticity Guarantee",
+    "footer_wholesale": "Wholesale",
+    "footer_customer_care": "Customer Care",
+    "footer_shipping_policy": "Shipping Policy",
+    "footer_return_policy": "Return Policy",
+    "footer_faq": "FAQ",
+    "footer_contact_us": "Contact Us",
+    "footer_newsletter": "Newsletter",
+    "footer_subscribe_text": "Subscribe to get special offers, free giveaways, and once-in-a-lifetime deals.",
+    "footer_email_placeholder": "Enter your email",
+    "footer_join": "Join",
+    "footer_copyright": "© 2026 Japan Anime Shoten. All rights reserved."
 }
