--- a/public/locales/ja/common.json
+++ b/public/locales/ja/common.json
@@ -26,5 +26,22 @@
     "badge_support_desc": "安心の配送状況確認",
     "announcement_shipping": "通常配送無料！",
     "text_free_shipping": "通常配送無料",
-    "text_auth_guarantee": "100% 正規品保証"
+    "text_auth_guarantee": "100% 正規品保証",
+    "featured_products": "注目商品",
+    "view_all_products": "すべて見る",
+    "search": "検索",
+    "footer_about_us": "私たちについて",
+    "footer_our_story": "私たちのストーリー",
+    "footer_authenticity": "正規品保証",
+    "footer_wholesale": "卸売り",
+    "footer_customer_care": "カスタマーケア",
+    "footer_shipping_policy": "配送ポリシー",
+    "footer_return_policy": "返品ポリシー",
+    "footer_faq": "よくある質問",
+    "footer_contact_us": "お問い合わせ",
+    "footer_newsletter": "ニュースレター",
+    "footer_subscribe_text": "特別オファー、無料プレゼント、一生に一度の取引を入手するために登録してください。",
+    "footer_email_placeholder": "メールアドレスを入力",
+    "footer_join": "参加する",
+    "footer_copyright": "© 2026 Japan Anime Shoten. All rights reserved."
 }
