--- a/public/locales/th/common.json
+++ b/public/locales/th/common.json
@@ -2,7 +2,6 @@
     "title": "ร้านหนังสือการ์ตูนญี่ปุ่น",
     "welcome": "ส่งสินค้าอนิเมะแท้จากญี่ปุ่นไปทั่วโลก",
     "new_arrivals": "สินค้ามาใหม่",
-    "featured_products": "สินค้าแนะนำ",
     "add_to_cart": "เพิ่มลงตะกร้า",
     "price_yen": "¥{{price}}",
     "hero_subtitle": "รับประกันของแท้ 100%・จัดส่งทั่วโลก",
@@ -25,5 +24,22 @@
     "badge_support_desc": "ตรวจสอบสถานะการจัดส่งได้เสมอ",
     "announcement_shipping": "จัดส่งแบบธรรมดาฟรี!",
     "text_free_shipping": "จัดส่งแบบธรรมดาฟรี",
-    "text_auth_guarantee": "รับประกันของแท้ 100%"
+    "text_auth_guarantee": "รับประกันของแท้ 100%",
+    "featured_products": "สินค้าแนะนำ",
+    "view_all_products": "ดูสินค้าทั้งหมด",
+    "search": "ค้นหา",
+    "footer_about_us": "เกี่ยวกับเรา",
+    "footer_our_story": "เรื่องราวของเรา",
+    "footer_authenticity": "การรับประกันของแท้",
+    "footer_wholesale": "ขายส่ง",
+    "footer_customer_care": "ฝ่ายบริการลูกค้า",
+    "footer_shipping_policy": "นโยบายการจัดส่ง",
+    "footer_return_policy": "นโยบายการคืนสินค้า",
+    "footer_faq": "คำถามที่พบบ่อย",
+    "footer_contact_us": "ติดต่อเรา",
+    "footer_newsletter": "จดหมายข่าว",
+    "footer_subscribe_text": "สมัครเพื่อรับข้อเสนอพิเศษ ของแจกฟรี และดีลสุดพิเศษ",
+    "footer_email_placeholder": "ป้อนอีเมลของคุณ",
+    "footer_join": "เข้าร่วม",
+    "footer_copyright": "© 2026 Japan Anime Shoten. สงวนลิขสิทธิ์"
 }
