--- a/public/locales/zh-CN/common.json
+++ b/public/locales/zh-CN/common.json
@@ -2,7 +2,6 @@
     "title": "日本アニメ書店",
     "welcome": "日本限定のアニメグッズを世界中にお届けします。",
     "new_arrivals": "新着商品",
-    "featured_products": "おすすめ商品",
     "add_to_cart": "カートに追加",
     "price_yen": "¥{{price}}",
     "hero_subtitle": "100%正規品保証・世界中へ配送",
@@ -25,5 +24,22 @@
     "badge_support_desc": "随时掌握物流动态",
     "announcement_shipping": "标准配送免费！",
     "text_free_shipping": "标准配送免费",
-    "text_auth_guarantee": "100% 正品保证"
+    "text_auth_guarantee": "100% 正品保证",
+    "featured_products": "精选商品",
+    "view_all_products": "查看所有商品",
+    "search": "搜索",
+    "footer_about_us": "关于我们",
+    "footer_our_story": "我们的故事",
+    "footer_authenticity": "正品保证",
+    "footer_wholesale": "批发",
+    "footer_customer_care": "客户服务",
+    "footer_shipping_policy": "配送政策",
+    "footer_return_policy": "退货政策",
+    "footer_faq": "常见问题",
+    "footer_contact_us": "联系我们",
+    "footer_newsletter": "订阅通讯",
+    "footer_subscribe_text": "订阅以获取特别优惠、免费赠品和千载难逢的交易。",
+    "footer_email_placeholder": "输入您的电子邮件",
+    "footer_join": "加入",
+    "footer_copyright": "© 2026 Japan Anime Shoten. 保留所有权利。"
 }
